--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p id="content-hero">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto fugit laborum magni, fuga, fugiat ullam deserunt perferendis facilis est neque totam, consectetur dolor nihil ducimus odit error! Illum, culpa. Quia.</p>
                 <button id="button-hero">Sign Up</button>
             </div>
-            <img src="" alt="some random pic">
+            <img src="./images/sunflower.jpg" alt="some random pic">
         </div>
     </div>
 
@@ -51,8 +51,8 @@
 
     <div class="quoted-section">
         <div class="quote">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In itaque, aspernatur tempora saepe totam assumenda voluptatum, ea dolor, voluptatem molestias provident voluptatibus amet. Rerum, a totam vel cum esse quidem.</p>
-            <p id="author">-Quoted by</p>
+            <p id="quote1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. In itaque, aspernatur tempora saepe totam assumenda voluptatum, ea dolor, voluptatem molestias provident voluptatibus amet. Rerum, a totam vel cum esse quidem.</p>
+            <p class="author"><strong>-Quoted by</strong></p>
         </div>
     </div>
 
@@ -63,11 +63,11 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum placeat tempore provident dolore, veritatis cupiditate earum id repellat. Recusandae quaerat illum pariatur ipsa natus quod accusamus omnis sed excepturi aliquid!</p>
             </div>
         <button id="2button">Sign Up</button>
-    </div>
+        </div>
     </div>
 
     <footer>
-        <p>Copyright @ The Odin Project</p>
+        <p>Copyright © The Odin Project</p>
     </footer>
 </body>
 </html>
